--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta property="og:title" content="Giang ♡ Quân">
 <!--    <meta property="og:url" content="http://tiamo.love/671422ee39363db26f130e51d635e222a163edda6d98b7b14d2aa534f048ff48">-->
     <meta property="og:description" content="Đến chung vui cùng Giang ♡ Quân vào 09:00 18/11/2023. Hãy cùng Tiamo gửi ngàn lời chúc phúc tới hai bạn nhé!">
-    <meta property="og:image" content="./storage/1611/4790f8088b1811407f771a9e7bc186d2a35900e514f2900fab78c87fdd1f15e6.jpg">
-    <meta property="og:image:url" content="./storage/1611/4790f8088b1811407f771a9e7bc186d2a35900e514f2900fab78c87fdd1f15e6.jpg">
-    <meta property="og:image:secure_url" content="./storage/1611/4790f8088b1811407f771a9e7bc186d2a35900e514f2900fab78c87fdd1f15e6.jpg">
+    <meta property="og:image" content="https://quannguyen030194.github.io/storage/1611/4790f8088b1811407f771a9e7bc186d2a35900e514f2900fab78c87fdd1f15e6.jpg">
+    <meta property="og:image:url" content="https://quannguyen030194.github.io/storage/1611/4790f8088b1811407f771a9e7bc186d2a35900e514f2900fab78c87fdd1f15e6.jpg">
+    <meta property="og:image:secure_url" content="https://quannguyen030194.github.io/storage/1611/4790f8088b1811407f771a9e7bc186d2a35900e514f2900fab78c87fdd1f15e6.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Giang ♡ Quân">
     <meta name="twitter:description" content="Đến chung vui cùng Giang ♡ Quân vào 09:00 18/11/2023. Hãy cùng Tiamo gửi ngàn lời chúc phúc tới hai bạn nhé!">
