--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Giang ♡ Quân">
     <meta name="twitter:description" content="Đến chung vui cùng Giang ♡ Quân vào 09:00 18/11/2023. Hãy cùng Tiamo gửi ngàn lời chúc phúc tới hai bạn nhé!">
-    <meta name="twitter:image" content="./storage/1611/4790f8088b1811407f771a9e7bc186d2a35900e514f2900fab78c87fdd1f15e6.jpg">
+    <meta name="twitter:image" content="https://quannguyen030194.github.io/storage/1611/4790f8088b1811407f771a9e7bc186d2a35900e514f2900fab78c87fdd1f15e6.jpg">
     <link rel="icon" type="image/png" href="https://tiamo.love/favicon.svg">
     <link rel="stylesheet" href="./assets/template-2/css/index.css" media="all" />
     <link rel="stylesheet" href="./assets/template-2/css/styles.css" type="text/css" media="all" />
